--- a/index.html
+++ b/index.html
@@ -8,16 +8,11 @@
 </head>
 <body>
 
+    <div id="passwgen"></div>
 
 
 
 
-
-
-
-
-
-    
     <script src="./js/script.js"></script>
 </body>
 </html>
